--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
       # https://github.com/walterbm/rusty-resizer/blob/33295758168171d3ad022e9e4938525f2d264017/.github/workflows/ci.yml#L13-L27
       # Instead, we just alias the old binary name to the new one because we don't use any of the new functionality.
       - name: 🔗 Alias ImageMagick
-        run: ln -s /usr/bin/convert /usr/bin/magick
+        run: sudo ln -s /usr/bin/convert /usr/bin/magick
 
       - name: 🔍 Tool versions
         run: make versions
