--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,13 @@ jobs:
       - name: ⏬ Install terser
         run: sudo npm install -g terser
 
+      - name: ⏬ Install cavif
+        run: |
+          set -e
+          curl -L https://github.com/kornelski/cavif-rs/releases/download/v1.3.3/cavif-1.3.3.zip | tar xzf -
+          chmod a+x "$(pwd)/linux-generic/cavif"
+          sudo mv "$(pwd)/linux-generic/cavif" /usr/bin/cavif
+        
       # Ideally we'd install ImageMagick 7 here because it provides the new `magick` binary that we later.
       # However it's quite tedious to do right now, see
       # https://github.com/walterbm/rusty-resizer/blob/33295758168171d3ad022e9e4938525f2d264017/.github/workflows/ci.yml#L13-L27
