--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,14 @@ jobs:
           chmod +x bin/tinysearch
           echo "$(pwd)/bin" >> ${GITHUB_PATH}
 
+      - name: ⏬ Install cavif
+        run: |
+          set -e
+          mkdir cavif
+          curl -sSL https://github.com/kornelski/cavif-rs/releases/download/v1.3.3/cavif-1.3.3.zip | tar xz --directory=cavif
+          chmod +x "$(pwd)/cavif/linux-generic/cavif"
+          echo "$(pwd)/cavif/linux-generic" >> ${GITHUB_PATH}
+
       - name: ⏬ Install binaryen
         run: |
           set -e
@@ -46,13 +54,6 @@ jobs:
 
       - name: ⏬ Install terser
         run: sudo npm install -g terser
-
-      - name: ⏬ Install cavif
-        run: |
-          set -e
-          curl -L https://github.com/kornelski/cavif-rs/releases/download/v1.3.3/cavif-1.3.3.zip | tar xzf -
-          chmod a+x "$(pwd)/linux-generic/cavif"
-          sudo mv "$(pwd)/linux-generic/cavif" /usr/bin/cavif
         
       # Ideally we'd install ImageMagick 7 here because it provides the new `magick` binary that we later.
       # However it's quite tedious to do right now, see
