--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,6 +4,7 @@ account_id = "1c71f27d6fa097a1576b4ffab9186fa8"
 workers_dev = false
 route = "*endler.dev/*"
 zone_id = "ac5871ca4c20923c76e603f50eb50ef8"
+compatibility_date = "2022-07-15"
 
 [site]
 bucket = "./public"
