--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,10 +41,10 @@ jobs:
       - name: ⏬ Install cavif
         run: |
           set -e
-          mkdir cavif
-          curl -sSL https://github.com/kornelski/cavif-rs/releases/download/v1.3.3/cavif-1.3.3.zip | tar xz --directory=cavif
-          chmod +x "$(pwd)/cavif/linux-generic/cavif"
-          echo "$(pwd)/cavif/linux-generic" >> ${GITHUB_PATH}
+          curl -sSL https://github.com/kornelski/cavif-rs/releases/download/v1.3.3/cavif-1.3.3.zip --output=cavif.zip
+          unzip cavif.zip
+          chmod +x "$(pwd)/linux-generic/cavif"
+          echo "$(pwd)/linux-generic" >> ${GITHUB_PATH}
 
       - name: ⏬ Install binaryen
         run: |
