--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,9 +42,9 @@ jobs:
         run: |
           set -e
           curl -sSL https://github.com/kornelski/cavif-rs/releases/download/v1.3.3/cavif-1.3.3.zip --output cavif.zip
-          unzip cavif.zip
-          chmod +x "$(pwd)/linux-generic/cavif"
-          echo "$(pwd)/linux-generic" >> ${GITHUB_PATH}
+          unzip cavif.zip -d cavif
+          chmod +x "$(pwd)/cavif/linux-generic/cavif"
+          echo "$(pwd)/cavif/linux-generic" >> ${GITHUB_PATH}
 
       - name: ⏬ Install binaryen
         run: |
