--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,7 @@ jobs:
           echo "$(pwd)/cavif/linux-generic" >> ${GITHUB_PATH}
 
       - name: ⏬ Install cwebp
-        run: sudo apt-get update && apt-get install -y webp
+        run: sudo apt-get update && sudo apt-get install -y webp
 
       - name: ⏬ Install binaryen
         run: |
