--- a/.github/workflows/links.yml
+++ b/.github/workflows/links.yml
@@ -15,6 +15,8 @@ jobs:
       - name: Link Checker
         id: lychee
         uses: lycheeverse/lychee-action@v1.5.1
+        with:
+          fail: true
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
