--- a/lychee.toml
+++ b/lychee.toml
@@ -23,6 +23,7 @@ exclude = [
     'https://en.wikiquote.org/wiki/H',
 
 ]
+exclude_mail = true
 exclude_loopback = true
 exclude_private = true
 exclude_path = ["templates"]
