--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,7 +69,7 @@ jobs:
         run: make images
 
       - name: 📖 Build
-        run: make build
+        run: make content # TODO: Switch back to `make build` once tinysearch is fixed
         env:
           GITHUB_TOKEN: ${{ secrets.PERSONAL_TOKEN }}
 
