--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,8 +33,8 @@ jobs:
       - name: ⏬ Install tinysearch 
         run: |
           set -e
-          curl -sSL https://github.com/tinysearch/tinysearch/releases/download/v0.6.3/tinysearch-v0.6.3-x86_64-unknown-linux-gnu.tar.gz | tar xz --directory=bin
-          sudo install "$(pwd)/bin/tinysearch" /usr/local/bin
+          curl -sSL https://github.com/tinysearch/tinysearch/releases/download/v0.8.2/tinysearch-v0.8.2-x86_64-unknown-linux-gnu.tar.gz | tar xz
+          sudo install "$(pwd)/tinysearch" /usr/local/bin
 
       - name: ⏬ Install cavif
         run: |
