--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
       - name: ⏬ Install wasm-pack
         run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
 
-      - name: ⏬ Install tinysearch 
+      - name: ⏬ Install tinysearch
         run: |
           set -e
           curl -sSL https://github.com/tinysearch/tinysearch/releases/download/v0.8.2/tinysearch-v0.8.2-x86_64-unknown-linux-gnu.tar.gz | tar xz
@@ -54,7 +54,7 @@ jobs:
 
       - name: ⏬ Install terser
         run: sudo npm install -g terser
-        
+
       # Ideally we'd install ImageMagick 7 here because it provides the new `magick` binary that we later.
       # However it's quite tedious to do right now, see
       # https://github.com/walterbm/rusty-resizer/blob/33295758168171d3ad022e9e4938525f2d264017/.github/workflows/ci.yml#L13-L27
@@ -75,6 +75,6 @@ jobs:
 
       - name: 🤠 Publish
         if: github.ref == 'refs/heads/master'
-        uses: cloudflare/wrangler-action@1.3.0
+        uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
