--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [master]
   schedule:
-    - cron: "0 18 * * *"
+    - cron: "0 18 1 * *"
   repository_dispatch:
   workflow_dispatch:
 
