--- a/config.toml
+++ b/config.toml
@@ -30,3 +30,4 @@ highlight_themes_css = [
     { theme = "demain", filename = "syntax-theme-light-custom.css" },
     { theme = "ayu-dark", filename = "syntax-theme-dark-custom.css" },
 ]
+bottom_footnotes = true
