--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,9 +1,5 @@
 name = "endler-dev"
-account_id = "1c71f27d6fa097a1576b4ffab9186fa8"
-workers_dev = false
-route = "*endler.dev/*"
-zone_id = "ac5871ca4c20923c76e603f50eb50ef8"
 compatibility_date = "2025-01-01"
 
-[site]
-bucket = "./public"
+[build]
+upload = { dir = "./public" }
