Add Rust toolchain with WASM target to CI
Install Rust toolchain with wasm32-unknown-unknown target
to support tinysearch WASM compilation in GitHub Actions.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,13 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: ⏬ Install Rust toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          target: wasm32-unknown-unknown
+          override: true
+
       - name: ⏬ Install zola
         run: sudo snap install --edge zola
 
