Fix tinysearch CLI flags in build pipeline (#79)
* Fix tinysearch CLI flags in Makefile

Update tinysearch command to use the correct CLI syntax:
- Replace deprecated --optimize flag with -o
- Add required -m wasm mode flag
- Replace --path with -p for output path

This fixes the build pipeline error where tinysearch was failing
with "Unrecognized argument: --release" due to CLI changes.

* Update tinysearch to v0.10.0 in CI workflow

- Bump tinysearch from v0.8.2 to v0.10.0 in GitHub Actions
- Restore --release flag in Makefile (now supported in v0.10.0)
- This resolves the CLI compatibility issue between local and CI environments

* Add Rust toolchain with WASM target to CI

Install Rust toolchain with wasm32-unknown-unknown target
to support tinysearch WASM compilation in GitHub Actions.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,13 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: ⏬ Install Rust toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          target: wasm32-unknown-unknown
+          override: true
+
       - name: ⏬ Install zola
         run: sudo snap install --edge zola
 
@@ -33,7 +40,7 @@ jobs:
       - name: ⏬ Install tinysearch
         run: |
           set -e
-          curl -sSL https://github.com/tinysearch/tinysearch/releases/download/v0.8.2/tinysearch-v0.8.2-x86_64-unknown-linux-gnu.tar.gz | tar xz
+          curl -sSL https://github.com/tinysearch/tinysearch/releases/download/v0.10.0/tinysearch-v0.10.0-x86_64-unknown-linux-gnu.tar.gz | tar xz
           sudo install "$(pwd)/tinysearch" /usr/local/bin
 
       - name: ⏬ Install cavif
