--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,11 +18,11 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: ⏬ Install Rust toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          target: wasm32-unknown-unknown
-          override: true
+        run: |
+          curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+          source ~/.cargo/env
+          rustup target add wasm32-unknown-unknown
+          echo "$HOME/.cargo/bin" >> $GITHUB_PATH
 
       - name: ⏬ Install zola
         run: sudo snap install --edge zola
